[package]
name = "bulk-payment-contract"
description = "NEAR smart contract for bulk payment processing - Part of NEAR Treasury"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NEAR-DevHub/treasury26"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.16"

[dev-dependencies]
near-sdk = { version = "5.16", features = ["unit-testing"] }
near-sandbox = "0.2.0"
near-api = "0.7.7"
near-crypto = "0.31"
cargo-near-build = "0.8.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"

# Enable reproducible builds
[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
